Signed-off-by: mrsugar17 <mrsugar17@users.noreply.github.com>github sso system

--- a/alchemist/templates/index.html
+++ b/alchemist/templates/index.html
@@ -5,8 +5,8 @@
 
 
   <div class="jumbotron">
-    <h1>Alchemist !</h1>
-    <p>Social Network for Metallurgist !</p>
+    <h1>Welcome {{current_user.username}} !</h1>
+    <p>Social Network for Metallurgist.</p>
   </div>
 
 
