--- a/alchemist/templates/base.html
+++ b/alchemist/templates/base.html
@@ -5,6 +5,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Place your kit's code here -->
+    <script src="https://kit.fontawesome.com/798beb8588.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <title>Alchemist</title>
     <link rel="icon" type="image/png" href="../static/logo.png" />
@@ -54,20 +56,23 @@
         </div>
 
         {% else %}
-        <li class="nav-link"><a href="{{ url_for('users.login') }}">Log In</a></li>
-        <li class="nav-link"><a href="{{ url_for('users.register') }}">Register</a></li>
+        <span>
+        <a class="btn btn-block btn-social btn-github" href="{{ url_for('users.login') }}">
+        <i class="fab fa-github"></i>
+        Sign In/Up with Github
+        </a>
+        </span>
         {% endif %}
 
       </div>
     </nav>
 
 
-  </div>
-  
+
   {% block content %}
 
   {% endblock %}
 
 
   </body>
-</html>
+  </html>
