Signed-off-by: mrsugar17 <mrsugar17@users.noreply.github.com>sso user name should be always the same username of github Signed-off-by: mrsugar17 <mrsugar17@users.noreply.github.com>

--- a/alchemist/templates/account.html
+++ b/alchemist/templates/account.html
@@ -12,10 +12,11 @@
 
   <form  method="POST" action = "" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
+    <!--
     <div class="form-group">
       {{ form.username.label(class="form-group") }}
       {{form.username(class='form-control')  }}
-    </div
+    </div --->
     <div class="container">
     <div class="form-group">
       {{ form.picture.label(class="form-group") }}
