--- a/alchemist/templates/index.html
+++ b/alchemist/templates/index.html
@@ -5,7 +5,7 @@
 
 
   <div class="jumbotron">
-    <h1>Welcome {{current_user.username}} !</h1>
+    <h1>Welcome {{current_user.fullname}} !</h1>
     <p>Social Network for Metallurgist.</p>
   </div>
 
